# cybersecurity_piscine

./: .gitignore  README.md
cyber_arachnida/scorpion/: README.md  pyproject.toml  scorpion.py
cyber_arachnida/scorpion/src/: cli.py
cyber_arachnida/scorpion/tests/: test_scorpion.py
cyber_arachnida/spider/: README.md  pyproject.toml  spider.py
cyber_arachnida/spider/src/: cli.py  console.py  crawler.py  downloader.py  parser.py  robot.py  spider_state.py  url.py
cyber_arachnida/spider/test/: page2.html  page3.html
cyber_arachnida/spider/tests/: index.html  page1.html  test_spider.py
cyber_ft_onion/: README.md  compose.yml
cyber_ft_onion/client/: Dockerfile  entrypoint.sh
cyber_ft_onion/nginx/: Dockerfile  index.html  nginx.conf
cyber_ft_onion/sshd/: Dockerfile  entrypoint.sh  sshd_config
cyber_ft_onion/tor/: Dockerfile  torrc
cyber_ft_otp/: README.md  pyproject.toml
cyber_ft_otp/ft_otp/: __main__.py  cli.py  crypto.py  gen_key.py  otp.py  utils.py
cyber_ft_otp/tests/: test_ft_otp.py
cyber_inquisitor/: Makefile  README.md  compose.yml  get_mac.sh
cyber_inquisitor/client/: Dockerfile  entrypoint.sh  topsecret.txt
cyber_inquisitor/inquisitor/: Dockerfile  entrypoint.sh  pyproject.toml  run.sh
cyber_inquisitor/inquisitor/src/: cli.py
cyber_iron_dome/: README.md  pyproject.toml
cyber_iron_dome/iron_dome/: cli.py  constants.py  daemon.py  inotify_watcher.py  monitors.py
cyber_iron_dome/src/: cli.py  inotify_watcher.py  iron_dome.py  monitors.py
cyber_iron_dome/tests/: test_alerts.py  test_iron_dome.py
cyber_reverse_me/level1/: source.c
cyber_reverse_me/level2/: source.c
cyber_reverse_me/level3/: source.c
cyber_stockholm/: Dockerfile  Makefile  README.md
cyber_stockholm/include/: Stockholm.hpp
cyber_stockholm/infection/: code.py  database.sql  text.txt
cyber_stockholm/src/: Stockholm.cpp  main.cpp
cyber_vaccine/: README.md  pyproject.toml
cyber_vaccine/vaccine/: app_mysql.py  app_sqlite.py  cli.py  constants.py  sqli_scanner.py
