[tool.poetry]
name = "irondome"
version = "0.1.0"
description = ""
authors = ["allemago <gbk.maelle@outlook.fr>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
python-daemon = "^3.1.2"
lockfile = "^0.12.2"
inotify-simple = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.scripts]
irondome = "src.cli:run"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
