[tool.poetry]
name = "Vaccine"
version = "0.1.0"
description = "SQL injection vulnerability scanner"
authors = ["allemago <gbk.maelle@outlook.fr>"]
readme = "README.md"
packages = [{include = "vaccine"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.5"
beautifulsoup4 = "^4.14.3"
flask = "^3.1.3"
pymysql = "^1.1.2"

[tool.poetry.scripts]
vaccine = "vaccine.cli:main"
app_sqlite = "vaccine.app_sqlite:run"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
