[tool.poetry]
name = "inquisitor"
version = "0.1.0"
description = "ARP poisoning tool with FTP sniffing"
authors = ["allemago <gbk.maelle@outlook.fr>"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
scapy = "^2.7.0"

[tool.poetry.scripts]
inquisitor = "src.cli:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
